TransactionGroupService > improve sql queries